--- a/build.gradle
+++ b/build.gradle
@@ -17,13 +17,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.21'
+    ext.kotlin_version = '1.3.72'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:4.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -32,22 +32,27 @@ buildscript {
     ext {
         // SDK and tools
         compileSdkVersion = 28
-        minSdkVersion = 21
-        targetSdkVersion = 28
+        minSdkVersion = 24
+        targetSdkVersion = 30
 
         // App dependencies
-        androidXTestVersion = '1.1.1'
+        androidXTestVersion = '1.2.0'
         constraintLayoutVersion = '1.1.3'
-        espressoVersion = '3.1.0-alpha4'
+        espressoVersion = '3.3.0-rc01'
         gradleVersion = '3.3.1'
         junitVersion = '4.12'
         hamcrestVersion = '1.3'
-        kotlinVersion = '1.3.21'
-        runnerExtVersion = '1.1.0'
-        rulesVersion = '1.0.1'
-        appCompatVersion = '1.0.2'
+        kotlinVersion = '1.3.72'
+        materialVersion = '1.3.0-alpha01'
+        navigationVersion = '2.3.0'
+        fragmentVersion = '1.3.0-alpha06'
+        runnerExtVersion = '1.1.1'
+        rulesVersion = '1.2.0'
+        appCompatVersion = '1.1.0'
         supportLibraryVersion = '1.0.2'
-        archLifecycleVersion = '2.1.0-alpha03'
+        archLifecycleVersion = '2.3.0-alpha05'
+        archLifecycleVersionExt = '2.2.0'
+        recyclerViewVersion = '1.0.0'
     }
 }
 
